--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://blog.markpoko.dev/public'
 languageCode = 'en-us'
 title = 'Mark Poko'
 theme = "risotto"
